[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/OptionsMenu/OptionsMenu.gd" type="Script" id=2]

[node name="OptionsMenu" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.5
margin_top = -150.0
margin_right = 152.5
margin_bottom = 150.0
rect_min_size = Vector2( 305, 300 )
custom_constants/separation = 20
script = ExtResource( 2 )

[node name="MasterControl" type="HBoxContainer" parent="."]
margin_right = 305.0
margin_bottom = 16.0

[node name="MasterLabel" type="Label" parent="MasterControl"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Master :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterHSlider" type="HSlider" parent="MasterControl"]
margin_left = 105.0
margin_right = 305.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
max_value = 10.0
step = 0.05
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXControl" type="HBoxContainer" parent="."]
margin_top = 36.0
margin_right = 305.0
margin_bottom = 52.0

[node name="SFXLabel" type="Label" parent="SFXControl"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "SFX :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXHSlider" type="HSlider" parent="SFXControl"]
margin_left = 105.0
margin_right = 305.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
max_value = 10.0
step = 0.05
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicControl" type="HBoxContainer" parent="."]
margin_top = 72.0
margin_right = 305.0
margin_bottom = 88.0

[node name="MusicLabel" type="Label" parent="MusicControl"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicHSlider" type="HSlider" parent="MusicControl"]
margin_left = 105.0
margin_right = 305.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
max_value = 10.0
step = 0.05
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteControl" type="HBoxContainer" parent="."]
margin_top = 108.0
margin_right = 305.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 40 )

[node name="MuteLabel" type="Label" parent="MuteControl"]
margin_top = 13.0
margin_right = 225.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Mute :"

[node name="MuteButton" type="CheckButton" parent="MuteControl"]
margin_left = 229.0
margin_right = 305.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenControl" type="HBoxContainer" parent="."]
margin_top = 168.0
margin_right = 305.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 40 )

[node name="FullscreenLabel" type="Label" parent="FullscreenControl"]
margin_top = 13.0
margin_right = 225.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Fullscreen :"

[node name="FullscreenButton" type="CheckButton" parent="FullscreenControl"]
margin_left = 229.0
margin_right = 305.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="MasterControl/MasterHSlider" to="." method="_on_MasterHSlider_value_changed"]
[connection signal="value_changed" from="SFXControl/SFXHSlider" to="." method="_on_SFXHSlider_value_changed"]
[connection signal="value_changed" from="MusicControl/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="toggled" from="MuteControl/MuteButton" to="." method="_on_MuteButton_toggled"]
[connection signal="toggled" from="FullscreenControl/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
